Fixed iphone spacing issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,7 +64,7 @@ p{
 .header-img{
     width: 60vw;
     margin-top: -25vw;
-    margin-right: 15vw;
+    margin-right: 20vw;
 }
 .header-div{
     text-align: center;
@@ -99,7 +99,7 @@ p{
 }
 
 .phone{
-    width: 20vw;
+    width: 15vw;
 }
 .phone-div{
     text-align: center;
@@ -313,7 +313,7 @@ select.form-control:focus::-ms-value {
 
     .header-img{
       width: 200vw;
-      margin-top: -60vw;
+      margin-top: -65vw;
       margin-left: -75vw;
       padding-bottom: 10%;
     }
@@ -373,11 +373,11 @@ select.form-control:focus::-ms-value {
         overflow: hidden;
     }
     .section-heading{
-        font-size: 2.75em;
+        font-size: 2em;
         font-weight: bold;
     }
     .phone{
-        width: 45vw;
+        width: 40vw;
         padding-top: 5%;
     }
     .content-section{
